# dtos/swagger.go
@@ -313,3 +313,9 @@ type HotelOrderCreeatedResponse struct {
 	Message    string             `json:"message" example:"Successfully created ticket order"`
 	Data       HotelOrderResponse `json:"data"`
 }
+
+type GetNotificationByUserIDStatusOKResponses struct {
+	StatusCode int                  `json:"status_code" example:"200"`
+	Message    string               `json:"message" example:"Successfully get notification"`
+	Data       NotificationResponse `json:"data"`
+}
